--- a/source/index.html
+++ b/source/index.html
@@ -119,7 +119,7 @@
       <form action="#" class="form-section__form">
         <div class="row">
 
-          <div class="col-md-10 col-xs-12">
+          <div class="col-md-10 col-xs-12 no-gutter-right-desktop-only">
 
             <div class="form-section__input-wrapper">
               <input type="text" placeholder="123 Fake Street" class="form-section__input">
@@ -128,7 +128,7 @@
             </div>
           </div>
 
-          <div class="col-md-2 col-xs-12">
+          <div class="col-md-2 col-xs-12 no-gutter-left-desktop-only">
             <button type="submit" class="btn">Submit</button>
           </div>
 
