--- a/source/index.html
+++ b/source/index.html
@@ -163,14 +163,13 @@
             <label class="form__label">
               <input type="radio" name="address" class="form__input">
               <span class="form__radio-button" tabindex="0"></span>
-              <div class="form__details">
-                <h3 class="form__title">Address Entered</h3>
-                <p class="form__descr">
+
+                <span class="form__title">Address Entered</span>
+                <span class="form__descr">
                   123 Fake Street
                   <span class="form__descr-brake">Test City, Arizona</span>
-                  85203</p>
+                  85203</span>
 
-              </div>
             </label>
             <a class="form__link">Edit Address</a>
           </div>
@@ -179,12 +178,12 @@
             <label class="form__label">
               <input type="radio" name="address" class="form__input" checked>
               <span class="form__radio-button" tabindex="0"></span>
-              <div class="form__details">
-                <h3 class="form__title">Alternate Address</h3>
-                <p class="form__descr">123 Fake Street
+
+                <span class="form__title">Alternate Address</span>
+                <span class="form__descr">123 Fake Street
                   <span class="form__descr-brake">Test City, Arizona</span>
-                  85203</p>
-              </div>
+                  85203</span>
+
             </label>
           </div>
 
@@ -192,13 +191,12 @@
             <label class="form__label">
               <input type="radio" name="zone" class="form__input">
               <span class="form__radio-button" tabindex="0"></span>
-              <div class="form__details">
-                <h3 class="form__title">Zone 1</h3>
-                <p class="form__descr">123 Fake Street
-                  <span class="form__descr-brake">Test City, Arizona</span>
-                  85203</p>
 
-              </div>
+                <span class="form__title">Zone 1</span>
+                <span class="form__descr">123 Fake Street
+                  <span class="form__descr-brake">Test City, Arizona</span>
+                  85203</span>
+
             </label>
             <a class="form__link"> Undo</a>
           </div>
@@ -207,12 +205,12 @@
             <label class="form__label">
               <input type="radio" name="zone" class="form__input" checked>
               <span class="form__radio-button" tabindex="0"></span>
-              <div class="form__details">
-                <h3 class="form__title">Zone 2</h3>
-                <p class="form__descr">123 Fake Street
+
+                <span class="form__title">Zone 2</span>
+                <span class="form__descr">123 Fake Street
                   <span class="form__descr-brake">Test City, Arizona</span>
-                  85203</p>
-              </div>
+                  85203</span>
+
             </label>
           </div>
         </div>
